# xray-ai-lab

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CURSO.md
src/xray_ai/: __init__.py  app.py  data.py  demo_data.py  metrics.py  model.py  predict.py  train.py
tests/: test_core.py
