[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-ai-lab"
version = "0.1.0"
description = "Laboratorio educativo de clasificación de radiografías con PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
  "streamlit>=1.33",
  "torch>=2.2",
  "torchvision>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
xray-demo-data = "xray_ai.demo_data:main"
xray-predict = "xray_ai.predict:main"
xray-train = "xray_ai.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
